Added functional grasses navigation to all grass related pages.

--- a/_pages/grasses.html
+++ b/_pages/grasses.html
@@ -1,34 +1,26 @@
 ---
-layout: inner
+layout: grass
 title: Grasses
 permalink: /grasses/
 ---
 
-<h3>Grasses List</h3>
-<ul>
-  {% for grass in site.grasses %}
+<div id="main">
+  <h3>Resources</h3>
+  <ul>
     <li>
-      <a href="{{ grass.permalink }}">{{ grass.title }}</a>
+      <a href="http://plants.usda.gov/">USDA - Natural Resources Conservation Service</a>
     </li>
-  {% endfor %}
-</ul>
-
-<h3>Resources</h3>
-<ul>
-  <li>
-    <a href="http://plants.usda.gov/">USDA - Natural Resources Conservation Service</a>
-  </li>
-  <li>
-    <a href="http://www.wildflower.org/plants/">Ladybird Johnson Wild Flower Center</a>
-  </li>
-  <li>
-    <a href="http://www.seedsource.com">Native American Seed</a>
-  </li>
-  <li>
-    <a href="http://www.illinoiswildflowers.info">Illinois Wildflowers</a>
-  </li>
-  <li>
-    <a href="http://www.noble.org/apps/plantimagegallery/">Noble Foundation</a>
-  </li>
-</ul>
-
+    <li>
+      <a href="http://www.wildflower.org/plants/">Ladybird Johnson Wild Flower Center</a>
+    </li>
+    <li>
+      <a href="http://www.seedsource.com">Native American Seed</a>
+    </li>
+    <li>
+      <a href="http://www.illinoiswildflowers.info">Illinois Wildflowers</a>
+    </li>
+    <li>
+      <a href="http://www.noble.org/apps/plantimagegallery/">Noble Foundation</a>
+    </li>
+  </ul>
+</div>
